changed width of fieldset

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ button, input, select, textarea {
                 <div class="col- col-lg-8 mx-auto">
                     <h2 class="h2 text-center text-highlight purple franchise-finder">See What Jobs are Available<br>in your neighbourhood!</h2>
                     <div class="text-center text-highlight purple franchise-finder">
-                        <fieldset style="width: 600px;">
+                        <fieldset>
                             <form>
                                 <table>
                                     <tr>
